--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "start": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint",
     "update": "npm-check-updates -u --semverLevel major && npm install"
   },
   "dependencies": {
     "core-js": "3.6.5",
-    "mint-ui": "2.2.13",
     "register-service-worker": "1.7.1",
+    "vant": "2.7.1",
     "vue": "2.6.11",
     "vue-class-component": "7.2.3",
     "vue-property-decorator": "8.4.2",
@@ -22,30 +21,21 @@
   },
   "devDependencies": {
     "@types/chai": "4.2.11",
-    "@types/mocha": "5.2.7",
-    "@typescript-eslint/eslint-plugin": "2.30.0",
-    "@typescript-eslint/parser": "2.30.0",
-    "@vue/cli-plugin-babel": "~4.3.0",
-    "@vue/cli-plugin-e2e-cypress": "~4.3.0",
-    "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-plugin-pwa": "~4.3.0",
-    "@vue/cli-plugin-router": "~4.3.0",
-    "@vue/cli-plugin-typescript": "~4.3.0",
-    "@vue/cli-plugin-unit-mocha": "~4.3.0",
-    "@vue/cli-plugin-vuex": "~4.3.0",
-    "@vue/cli-service": "~4.3.0",
-    "@vue/eslint-config-prettier": "6.0.0",
-    "@vue/eslint-config-typescript": "5.0.2",
+    "@types/mocha": "7.0.2",
+    "@vue/cli-plugin-babel": "4.3.1",
+    "@vue/cli-plugin-e2e-cypress": "4.3.1",
+    "@vue/cli-plugin-pwa": "4.3.1",
+    "@vue/cli-plugin-router": "4.3.1",
+    "@vue/cli-plugin-typescript": "4.3.1",
+    "@vue/cli-plugin-unit-mocha": "4.3.1",
+    "@vue/cli-plugin-vuex": "4.3.1",
+    "@vue/cli-service": "4.3.1",
     "@vue/test-utils": "1.0.0-beta.33",
     "chai": "4.2.0",
-    "eslint": "6.8.0",
-    "eslint-plugin-prettier": "3.1.3",
-    "eslint-plugin-vue": "6.2.2",
-    "less": "3.11.1",
-    "less-loader": "5.0.0",
     "npm-check-updates": "4.1.2",
-    "prettier": "1.19.1",
-    "typescript": "~3.8.3",
+    "sass": "1.26.5",
+    "sass-loader": "8.0.2",
+    "typescript": "3.8.3",
     "vue-template-compiler": "2.6.11"
   }
 }
