--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "update": "npm-check-updates -u --semverLevel major && npm install"
   },
   "dependencies": {
+    "axios": "0.19.2",
     "core-js": "3.6.5",
     "register-service-worker": "1.7.1",
     "vant": "2.7.1",
