--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "axios": "0.19.2",
     "core-js": "3.6.5",
+    "js-base64": "2.5.2",
     "register-service-worker": "1.7.1",
-    "vant": "2.7.1",
+    "vant": "2.8.1",
     "vue": "2.6.11",
     "vue-class-component": "7.2.3",
     "vue-property-decorator": "8.4.2",
@@ -31,9 +32,9 @@
     "@vue/cli-plugin-unit-mocha": "4.3.1",
     "@vue/cli-plugin-vuex": "4.3.1",
     "@vue/cli-service": "4.3.1",
-    "@vue/test-utils": "1.0.0-beta.33",
+    "@vue/test-utils": "1.0.2",
     "chai": "4.2.0",
-    "npm-check-updates": "4.1.2",
+    "npm-check-updates": "5.0.0",
     "sass": "1.26.5",
     "sass-loader": "8.0.2",
     "typescript": "3.8.3",
